--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,20 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+               <groupId>org.springframework.boot</groupId>
+               <artifactId>spring-boot-maven-plugin</artifactId>
+               <configuration>
+                    <mainClass>com.phc.es.Application</mainClass>
+               </configuration>
+             <executions>
+                <execution>
+                   <goals>
+                        <goal>repackage</goal>
+                    </goals>
+                </execution>
+              </executions>
+           </plugin>
 		</plugins>
 	</build>
 </project>
