configured to external tomcat

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<artifactId>Entittlement_Service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Entittlement_service</name>
+	<packaging>war</packaging>
 	<description>Entittlement_Service project for Spring Boot</description>
 
 	<properties>
@@ -34,7 +35,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+        <!-- Instruct spring boot not to use the inbuilt Tomcat server -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -140,35 +147,7 @@
 				</executions>
 			</plugin>
 
-			<plugin>
-				<groupId>com.microsoft.azure</groupId>
-				<artifactId>azure-webapp-maven-plugin</artifactId>
-				<version>2.2.0</version>
-				<configuration>
-					<subscriptionId>9b5c9f4d-f7f3-411d-be99-4d77c21ee16d</subscriptionId>
-					<resourceGroup>devopsazurecourse</resourceGroup>
-					<appName>gs-springboot</appName>
-					<pricingTier>Free</pricingTier>
-					<region>Central US</region>
-					<runtime>
-						<os>Linux</os>
-						<webContainer>Java SE</webContainer>
-						<javaVersion>Java 8</javaVersion>
-					</runtime>
-					<deployment>
-						<resources>
-							<resource>
-								<type>jar</type>
-								<directory>${project.basedir}/target</directory>
-								<includes>
-									<include>*.jar</include>
-								</includes>
-							</resource>
-						</resources>
-					</deployment>
-				</configuration>
-			</plugin>
-		
+			
 		</plugins>
 	</build>
 </project>
